# cryolens

./: .gitignore  PR_SUMMARY.md  README.md  TESTING_ALIGNMENT_METHODS.md  check_viz.py  pyproject.toml  visualize_all_pairs.py  visualize_pairs.py  visualize_similarity_pairs.py
docs/: API_REFERENCE.md  api_reference.md  cryolens_demo_doc.md  evaluation.md  getting_started.md  mlc_dataset.md  server.md  similarity_pairs.md
examples/: README.md  classification_config.yaml  extract_copick_particles.py  id_reconstruction_config.yaml  ood_reconstruction_config.yaml  optimize_num_particles.py  optimize_num_samples.py  picking_quality_config.yaml  reconstruct_particles.py  reconstruct_particles_affinity.py  splat_alignment_example.py
notebooks/: reconstruction_from_trycryolens.ipynb
scripts/: evaluate_alignment_with_visualization.py  generate_weights_hash.py
src/cryolens/: affinity.py  logging.py  mlflow.py  visualization.py
src/cryolens/alignment/: __init__.py  kabsch.py  pca.py
src/cryolens/analysis/: __init__.py  classification.py  diversity.py  metrics.py
src/cryolens/data/: __init__.py  background_generator.py  collate.py  copick.py  datasets.py  fetchers.py  parquet_loader.py  random_structure_dataset.py  structured_dataloader.py  structured_sampler.py  tomotwin_dataset.py  tomotwin_loader.py  tomotwin_loader_enhanced.py
src/cryolens/docs/: similarity_all_pairs.py  similarity_matrix.py  viz_dataset.py  (+1 more)
src/tests/: test_vae_training.py
tests/: test_copick_integration.py  test_evaluation_metrics.py  test_pose_utilities.py  test_upstreamed_functions.py
(+68 files in other folders)
