[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryolens"
version = "0.1.0"
description = "CryoLens: a generative model for reconstructing structures from cryoET tomograms"
authors = [
    { name = "Kyle Harrington", email = "kharrington@chanzuckerberg.com" },
    { name = "Alan Lowe", email = "alowe@chanzuckerberg.com" }
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "numpy>=1.23.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "mrcfile>=1.5.0",
    "gemmi>=0.7.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-image>=0.20.0",
    "scikit-learn>=1.0.0",
    "pytorch-lightning>=2.0.0",
    "tqdm>=4.66.0",
    "filelock>=3.12.0",
    "mlflow>=2.21.3",
    "seaborn>=0.13.2",
    "graphviz>=0.20.3",
    "tabulate>=0.9.0",
    "psutil>=7.0.0",
    "pooch>=1.8.0",
    "h5py>=3.15.1",
    "copick>=1.17.0",
]

[project.optional-dependencies]
copick = [
    "copick",
    "zarr>=2.16.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cryolens = ["data/copick_configs/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
]
